--- a/package.json
+++ b/package.json
@@ -16,17 +16,13 @@
     "firebase": "^10.9.0",
     "mobx": "^6.12.0",
     "mobx-react-lite": "^4.0.6",
-    "moment": "^2.30.1",
-    "moment-hijri": "^2.1.2",
-    "moment-hijri-fixed": "^2.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.3",
-    "react-timer-hook": "^3.0.7"
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
-    "@types/moment-hijri": "^2.1.4",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
